// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/stories/TextFilter with filterText 1`] = `
<div
  class="css-gpw716"
>
  <input
    class="css-16z8x67"
    name="filter-text"
    placeholder="Filter"
    type="text"
    value="Filter Text"
  />
  <button
    class="css-1tb9faa clear"
  >
    ×
  </button>
</div>
`;

exports[`Storyshots ui/stories/TextFilter without filterText 1`] = `
<div
  class="css-gpw716"
>
  <input
    class="css-16z8x67"
    name="filter-text"
    placeholder="Filter"
    type="text"
    value=""
  />
</div>
`;
